<resources>
    <string name="app_name">SubMarker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="suggestion_fragment_label">Suggestion</string>
    <string name="dashboard_fragment_label">Dashboard</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="add_sub_activity_label">Add Subscriptions</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="btm_nav_home">Home</string>
    <string name="btm_nav_suggestions">Suggestions</string>
    <string name="btm_nav_dashboard">Dashboard</string>
    <string name="btm_nav_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Strings for Add Subscription activity-->
    <string name="tv_category">Which category does your subscription belong to?</string>
    <string name="tv_name">Name of your subscription</string>
    <string name="tv_period">Paying per</string>
    <string name="tv_on">On Every</string>
    <string name="tv_price">Price</string>
    <string name="pick_time">Pick A Date</string>
    <string name="submit">Submit!</string>

    <string name="days_left">days left</string>

    <!--Strings for setting page-->
    <string name="data_retrieval">Retrieve your data</string>
    <string name="your_current_id">Your Current ID</string>
    <string name="restore_id">Restoring Your ID</string>
    <string name="old_id">Old ID</string>
    <string name="connect">Connect</string>

    <string name="notification_settings">Notification Settings</string>
    <string name="tv_let_us_know_preference">Let us know what time do you want to receive your notifications!</string>
    <string name="btn_save">Save</string>

    <string name="bug_report">Report Bugs</string>

    <!--Shared Preference String-->
    <string name="preference_file_key">SubMarker</string>

    <!-- Notification Strings-->
    <string name="channel_name">Sub-Marker</string>
    <string name="channel_description">Sub-Marker</string>

    <string-array name="categories">
        <item>Video Streaming</item>
        <item>Music Streaming</item>
        <item>Bills</item>
        <item>Healthcare</item>
        <item>Others</item>
    </string-array>

    <string-array name="period">
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string name="title_activity_notification_settings">NotificationSettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="tv_bug_report">Please let us know more about the problem you are facing.</string>
    <string name="add">Add</string>
    <string name="notification_permissions">Notification Permissions</string>
</resources>