<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">

    <com.example.submarker.SettingsItem
        android:id="@+id/settings_retrieve_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:iconSrc="@drawable/ic_baseline_cloud_download_24"
        app:settingsName="@string/data_retrieval"/>

    <com.example.submarker.SettingsItem
        android:id="@+id/settings_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_retrieve_data"
        app:layout_constraintStart_toStartOf="parent"
        app:iconSrc="@drawable/ic_baseline_edit_notifications_24"
        app:settingsName="@string/notification_settings"/>

    <com.example.submarker.SettingsItem
        android:id="@+id/settings_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:iconSrc="@drawable/ic_baseline_bug_report_24"
        app:settingsName="@string/bug_report"/>


</androidx.constraintlayout.widget.ConstraintLayout>