<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DataRetrievalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_current"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/container_rounded"
        android:layout_margin="30dp"
        android:paddingVertical="30dp"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_your_current_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/your_current_id"
            android:textSize="@dimen/large_textSize"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_current_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="30dp"
            android:gravity="center"
            android:textSize="@dimen/common_textSize"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            app:layout_constraintTop_toBottomOf="@id/tv_your_current_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/container_rounded"
        android:layout_marginTop="70dp"
        android:paddingVertical="30dp"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_current">
        <TextView
            android:id="@+id/tv_restore_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/restore_id"
            android:textSize="@dimen/large_textSize"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_old_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingVertical="@dimen/common_margin"
            android:paddingHorizontal="10dp"
            android:lines="1"
            android:maxLines="1"
            android:hint="@string/old_id"
            android:background="@drawable/edit_text_border_rounded"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_restore_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/et_old_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>